# flake8-cgx

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
cgx/: __init__.py  plugin.py
flake8_cgx/: __init__.py  patch.py  plugin.py
tests/: test_plugin.py
tests/data/: example.cgx
